--- a/mHandler.cls
+++ b/mHandler.cls
@@ -10,7 +10,7 @@ Attribute VB_Name = "mHandler"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = False
+Attribute VB_Exposed = True
 ' Generic Handler
 Option Explicit
 Public objref As Object
